2003-03-19  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/modload.c: added fallback for loading regular
	shared libraries in addition to bundles on Darwin.

	* include/tcl.h: added set of version macros
	* nsd/config.c: added Ns_GetVersion API call.

2003-03-10  Scott S. Goodwin  <scott@scottg.net>

	* nscgi/nscgi.c: (bug) SERVER_NAME is now set correctly.

2003-03-10  Mark Page  <mpagenva@aol.com>

	* nsd/sched.c: (bug) Fix problem with shutting down event threads
	(these service detachted thread processing) on a server shutdown.

2003-03-07  Zoran Vasiljevic <zoran@archiware.com>
	
	* include/ns.h:
	* nscgi/nscgi.c:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/binder.c:
	* nsd/config.c:
	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/dns.c:
	* nsd/driver.c:
	* nsd/dstring.c:
	* nsd/encoding.c:
	* nsd/fastpath.c:
	* nsd/index.c:
	* nsd/info.c:
	* nsd/lisp.c:
	* nsd/listen.c:
	* nsd/log.c:
	* nsd/modload.c:
	* nsd/nsmain.c:
	* nsd/pidfile.c:
	* nsd/queue.c:
	* nsd/request.c:
	* nsd/rollfile.c:
	* nsd/sched.c:
	* nsd/sockcallback.c:
	* nsd/tclatclose.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclshare.c:
	* nsd/tclsock.c:
	* nsd/tclvar.c:
	* nsd/tclxkeylist.c:
	* nsd/urlencode.c:
	* nsd/urlspace.c:
	* nsdb/dbinit.c:
	* nsdb/dbtcl.c:
	* nsext/nsext.c:
	* nslog/nslog.c:
	* nspd/log.c:
	* nspd/main.c:
	* nsperm/nsperm.c:
	* nsthread/mutex.c:
	* nsthread/nsthreadtest.c:
	* nsthread/pthread.c: 
	  o. removed unused variables
	  o. fixed warnings about non-initialized vars
	  o. CONST-ified according to Tcl 8.4+ rules
	
	* bin/init.tcl: _ns_getscript forces import of 
  	  namespaced commands

	* tcl/init.tcl: sets auto_path to start with 
	  our private library first
	
	* include/Makefile.global.in: allows for building 
	  with Solaris 2.6 and later
 
2003-03-06  Mark Page  <mpagenva@aol.com>

	* nsd/adpeval.c: Change defn of objs field of InterpPage to size